# practicum-projects

./: README.md
search-server/: CMakeLists.txt  concurrent_map.h  document.cpp  document.h  log_duration.h  main.cpp  paginator.h  process_queries.cpp  process_queries.h  read_input_functions.cpp  read_input_functions.h  remove_duplicates.cpp  request_queue.cpp  request_queue.h  search_server.cpp  search_server.h  string_processing.cpp  string_processing.h
selfmade-stl/: optional.h  vector.h
spreadsheet/: CMakeLists.txt  FormulaAST.cpp  FormulaAST.h  cell.cpp  cell.h  common.h  formula.cpp  formula.h  main.cpp  sheet.cpp  sheet.h
transport-catalogue/: CMakeLists.txt  domain.h  geo.cpp  graph.h  input.json  json.h  json_builder.cpp  json_reader.cpp  json_reader.h  log_duration.h  main.cpp  map_renderer.cpp  map_renderer.h  output.json  ranges.h  request_handler.cpp  svg.h  transport_catalogue.cpp  transport_catalogue.h  transport_router.cpp  transport_router.h
transport-catalogue-proto/: CMakeLists.txt  geo.h  graph.h  json.cpp  json_builder.h  json_reader.cpp  json_reader.h  main.cpp  map_renderer.cpp  map_renderer.h  request_handler.h  router.h  serialization.cpp  serialization.h  svg.cpp  svg.h  transport_catalogue.cpp  transport_catalogue.h  transport_router.cpp  transport_router.h
transport-catalogue-proto/proto/: graph.proto  map_renderer.proto  svg.proto  transport_catalogue.proto  transport_router.proto
